css/base.css
body { font-family: 'Libre Baskerville', serif; }
footer { min-height: 100px; }
h2 { font-size: 1.8em; line-height: 1.6em; }
p { line-height: 1.8em; }
li { line-height: 1.4em; }
.hide-desktop { display: none; }

/*navbar*/

header { background: white; }
header .row { height: 100px; }
.navbar .link { padding: 10px; display: inline; }
.navbar .col-1-5 { -webkit-justify-content: flex-start; justify-content: flex-start; } 
.navbar .col-4-5 { padding-right: 30px; }
.navbar .col-4-5 { -webkit-justify-content: flex-end; justify-content: flex-end; }
.logo { padding: 10px 20px; }
.fa-bars { display: none; }
.highlight { background: yellow; }

/*padding*/

.pad-md { padding: 1em; }
.pad-lg { padding: 3em; }

/*floats*/

.float-right { float: right; } 

/*block*/

.center-block-sm { min-height: 100px; text-align: center; }
.center-block-lg { min-height: 150px; text-align: center; }
.min-height { min-height: 500px; }

/*buttons*/

button.button { font-size: 1em; font-family: 'Libre Baskerville', serif; border: none; cursor: pointer; }
.button { display: inline-block; padding: 15px 25px; color: white; text-decoration: none; background-color: #2594ba; transition: background-color .3s; }
.button:hover { background-color: #ff8d00; }
.link { color: #2594ba; text-decoration: none; font-weight: bold; transition: color .3s; }
.link:hover { color: #ff8d00; }
.link-flex { align-self: flex-start; }

/*bullets*/

ul { padding-left: 25px; }
ul li { padding: 4px 0 4px 0; }

/*bg colors*/

.bg-grey-dk { background-color: #e1e1e1; }
.bg-grey-md { background-color: #e8e8e8; }
.bg-grey-lt { background-color: #f2f2f2; }

.bg-blue-vivid { background-color: #2594ba; }
.bg-blue-vivid-lt { background-color: #DBE3EC; }
.bg-blue-vivid-ex-lt { background-color: #EAF1F9; }

.bg-green-dk { background-color: #439474; }
.bg-green-lt { background-color: #c3dcd2; }

/*fg colors*/

.fg-white { color: white; }
.fg-orange { color: #ff8d00; }
.fg-blue-vivid { color: #2594ba; }

/*bb backgrounds*/

.bb-bg { background-size: cover; background-position: center center; }
.bb-logo-left { background-image: url(../img/bb-logo-left.png); }
.bb-logo-right { background-image: url(../img/bb-logo-right.png); }
.bb-home01 { background-image: url(../img/bb-home01.jpg); }
.bb-home02 { background-image: url(../img/bb-home02.jpg); }
.bb-home03 { background-image: url(../img/bb-home03.jpg); }
.bb-home04 { background-image: url(../img/bb-home04.jpg); }

.bb-facilities01 { background-image: url(../img/bb-facilities01.jpg); }
.bb-facilities02 { background-image: url(../img/bb-facilities02.jpg); }

.bb-providers01 { background-image: url(../img/bb-providers01.jpg); }
.bb-providers02 { background-image: url(../img/bb-providers02.jpg); }

/*images*/

.responsive-img { display: block; width: 100%; }

/*top icon*/

.top-arrow { display: none; position: fixed; bottom: 20px; right: 20px; cursor: pointer; color: #2594ba; transition: color .3s; }
.top-arrow:hover { color: #ff8d00; }

/*disclaimer*/

p.disc { font-size: 0.9em; text-align: center; }
.form-disc { display: none; font-size: 1em; padding: 0 0 10px 0; margin: 0; color: #ff8d00; width: 100%; }
.fg-white a { color: white; }

/*forms*/

form input, form textarea { width: 100%; margin: 5px 0 5px 0; padding: 10px; font-size: 1em; font-family: 'Libre Baskerville', serif; border: 1px solid #d7d7d7; -webkit-appearance: none; -webkit-border-radius: 0px; }
form input:last-of-type, form textarea:last-of-type { margin-bottom: 10px; }
input[type="text"][required] {
	background-image: radial-gradient(#ff8d00 15%, transparent 16%), radial-gradient(#ff8d00 15%, transparent 16%);
	background-size: 1.4em 1.4em;
	background-position: top right;
	background-repeat: no-repeat
}
form textarea { min-height: 100px; }

/*thanks*/
.thanks { display: none; }
.spinner { display: none; position: fixed; padding: 20px; background: white; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 100; border-radius: 20px; border: 10px solid #d7d7d7; }

/*navbar media query*/

@media (max-width: 800px) {

	.hide-desktop { display: block; }
	header .row { height: auto; }
	.navbar .col-1-5 { width: 100%; }
	.navbar .col-4-5 { display: none; }
	.navbar:after { content: ""; display: table; clear: both; }

	/*mobile links*/
	.mobile-links { overflow: hidden; height: 0; text-align: center; padding: 0; transition: all .3s; }
	.mobile-links a { display: block; padding: 15px; font-size: 1.2em; }
	.open { height: 290px; }
	.logo { width: 220px; height: 69px;}
	.fa-bars { display: block; position: absolute; top: 19px; right: 20px; }
} 

/*smarphone media query*/

@media (max-width: 680px) {
	
	h2, p, li { line-height: 1.3em; }
	.float-right { float: none; }
	.button { width: 100%; }
	.hide-mobile { display: none; }
	.min-height { min-height: 280px; }
	.pad-lg { padding: 2em; }
	.center-block-lg { min-height: 100px; }
	.top-arrow { display: none !important; }
} 

